--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Italian drama'
 - !lcc 'PQ'
+- GITenberg
 title: "Nellina: Dramma in tre atti\r\n(Taken from Roberto Bracco Teatro, Vol. VII)"
 url: http://www.gutenberg.org/ebooks/43512
